trunk/Archive2/01/1636dba49df01d/output
main.cpp:241:11: error: 'typaname' has not been declared
 template <typaname H>
           ^
main.cpp:243:22: error: expected nested-name-specifier before 'Solve'
     typedef typename Solve<H, 1, 2, 3>::result result;
                      ^
main.cpp:243:22: error: expected ';' at end of member declaration
main.cpp:243:27: error: expected unqualified-id before '<' token
     typedef typename Solve<H, 1, 2, 3>::result result;
                           ^
main.cpp:250:14: error: 'H' was not declared in this scope
 struct Solve<H, 1, 2, 3> {
              ^
main.cpp:250:24: error: template argument 1 is invalid
 struct Solve<H, 1, 2, 3> {
                        ^
main.cpp:265:9: error: type/value mismatch at argument 1 in template parameter list for 'template<int H> struct Solution'
         >::result,
         ^
main.cpp:265:9: error:   expected a constant of type 'int', got 'Hanoi<Stack<Disc<4>, Stack<Disc<3>, Stack<Disc<2>, Stack<Disc<1>, NullType> > > >, NullType, NullType>'
main.cpp:271:5: error: template argument 1 is invalid
     >::value, "Solution<> is not working."
     ^
